--- a/packages/apps/travel-log/apps-travel-log-api-core-modules/package.json
+++ b/packages/apps/travel-log/apps-travel-log-api-core-modules/package.json
@@ -15,6 +15,7 @@
     "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^0.0.0",
     "@js-modules/api-nest-module-auth-keycloak": "workspace:^0.0.0",
     "@js-modules/api-nest-utils": "workspace:^0.0.0",
+    "@js-modules/apps-travel-log-common-constants": "workspace:^0.0.0",
     "@js-modules/common-utils-general": "workspace:^0.0.0",
     "@nestjs/common": "^9.4.0",
     "@nestjs/config": "^2.3.1",
