--- a/packages/apps/travel-log/apps-travel-log-common-store-redux/package.json
+++ b/packages/apps/travel-log/apps-travel-log-common-store-redux/package.json
@@ -18,12 +18,13 @@
     "@js-modules/common-redux-reducer-auth-keycloak": "workspace:^0.0.0",
     "@js-modules/common-redux-utils-normalized-reducers": "workspace:^0.0.0",
     "@js-modules/common-utils-general": "workspace:^0.0.0",
+    "@js-modules/web-react-hooks": "workspace:^0.0.0",
     "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.37",
     "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.1",
+    "@types/validator": "^13.7.17",
     "axios": "^1.3.6",
-    "class-validator": "^0.14.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -31,6 +32,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
     "reselect": "^4.1.8",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.9.0"
   }
 }
