--- a/packages/web/react/web-react-hooks/package.json
+++ b/packages/web/react/web-react-hooks/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/validator": "^13.7.17",
+    "class-validator": "^0.14.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
