--- a/packages/web/react/web-react-components/tsconfig.json
+++ b/packages/web/react/web-react-components/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["@testing-library/jest-dom"]
   },
   "include": ["src"]
 }
