--- a/packages/api/nest/api-nest-module-auth-keycloak/package.json
+++ b/packages/api/nest/api-nest-module-auth-keycloak/package.json
@@ -14,27 +14,27 @@
   "dependencies": {
     "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^0.0.0",
     "@js-modules/api-nest-utils": "workspace:^0.0.0",
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.4.0",
-    "@nestjs/platform-express": "^9.4.0",
-    "@nestjs/swagger": "^6.3.0",
-    "@nestjs/testing": "^9.4.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "@types/cookie-session": "^2.0.44",
-    "@types/express": "^4.17.17",
-    "@types/lodash": "^4.14.194",
-    "@types/supertest": "^2.0.12",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.3.8",
+    "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/testing": "^10.3.8",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/cookie-session": "^2.0.49",
+    "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.4",
+    "@types/supertest": "^6.0.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "express": "^4.18.2",
-    "keycloak-connect": "^21.1.0",
-    "keycloak-js": "21.1.0-1",
+    "class-validator": "^0.14.1",
+    "express": "^4.19.2",
+    "keycloak-connect": "^24.0.4",
+    "keycloak-js": "24.0.4",
     "lodash": "^4.17.21",
-    "nest-keycloak-connect": "^1.9.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "typeorm": "^0.3.15"
+    "nest-keycloak-connect": "^1.10.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "eslintConfig": {
     "rules": {
