--- a/packages/api/nest/api-nest-module-auth-keycloak/package.json
+++ b/packages/api/nest/api-nest-module-auth-keycloak/package.json
@@ -12,26 +12,26 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^0.0.0",
-    "@js-modules/api-nest-utils": "workspace:^0.0.0",
-    "@nestjs/common": "^10.3.8",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.8",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/swagger": "^7.3.1",
-    "@nestjs/testing": "^10.3.8",
+    "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^",
+    "@js-modules/api-nest-utils": "workspace:^",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/testing": "^10.4.1",
     "@nestjs/typeorm": "^10.0.2",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.7",
     "@types/supertest": "^6.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^4.19.2",
-    "keycloak-connect": "^24.0.4",
-    "keycloak-js": "24.0.4",
+    "keycloak-connect": "^25.0.2",
+    "keycloak-js": "25.0.2",
     "lodash": "^4.17.21",
-    "nest-keycloak-connect": "^1.10.0",
+    "nest-keycloak-connect": "^1.10.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
