--- a/packages/api/nest/api-nest-utils/package.json
+++ b/packages/api/nest/api-nest-utils/package.json
@@ -12,23 +12,23 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@nestjs/common": "^10.3.8",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.8",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/swagger": "^7.3.1",
-    "@nestjs/testing": "^10.3.8",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/testing": "^10.4.1",
     "@nestjs/typeorm": "^10.0.2",
     "@types/cookie-session": "^2.0.49",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.7",
     "@types/supertest": "^6.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-session": "^2.1.0",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
-    "pg": "^8.11.5",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
