--- a/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
+++ b/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
@@ -11,16 +11,16 @@
     "typeorm": "pnpm build && cross-env NODE_ENV=dev typeorm -d build/app/app.config.typeormDataSource.js"
   },
   "dependencies": {
-    "@js-modules/api-nest-module-auth-basic": "workspace:^0.0.0",
-    "@js-modules/api-nest-utils": "workspace:^0.0.0",
-    "@nestjs/common": "^10.3.8",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.8",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/testing": "^10.3.8",
+    "@js-modules/api-nest-module-auth-basic": "workspace:^",
+    "@js-modules/api-nest-utils": "workspace:^",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/testing": "^10.4.1",
     "@nestjs/typeorm": "^10.0.2",
     "@types/cookie-session": "^2.0.49",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.7",
     "@types/supertest": "^6.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -33,8 +33,8 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.3.2",
-    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/cli": "^10.4.4",
+    "@nestjs/schematics": "^10.1.3",
     "@types/express": "^4.17.21",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
