--- a/packages/apps/nest-examples/apps-nest-examples-users-auth-basic/package.json
+++ b/packages/apps/nest-examples/apps-nest-examples-users-auth-basic/package.json
@@ -11,33 +11,33 @@
     "typeorm": "pnpm build && cross-env NODE_ENV=dev typeorm -d build/config/config.typeorm.dataSource.js"
   },
   "dependencies": {
-    "@js-modules/api-nest-module-auth-basic": "workspace:^0.0.0",
-    "@js-modules/api-nest-utils": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@nestjs/common": "^10.3.8",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.8",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/swagger": "^7.3.1",
-    "@nestjs/testing": "^10.3.8",
+    "@js-modules/api-nest-module-auth-basic": "workspace:^",
+    "@js-modules/api-nest-utils": "workspace:^",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/testing": "^10.4.1",
     "@nestjs/typeorm": "^10.0.2",
     "@types/cookie-session": "^2.0.49",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.7",
     "@types/supertest": "^6.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-session": "^2.1.0",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
-    "pg": "^8.11.5",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.3.2",
-    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/cli": "^10.4.4",
+    "@nestjs/schematics": "^10.1.3",
     "@types/express": "^4.17.21",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
