--- a/packages/apps/segway-rental/apps-segway-rental-store-redux/package.json
+++ b/packages/apps/segway-rental/apps-segway-rental-store-redux/package.json
@@ -12,21 +12,21 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@js-modules/apps-segway-rental-utils": "workspace:^0.0.0",
-    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@js-modules/web-react-components": "workspace:^0.0.0",
-    "@types/lodash": "^4.17.4",
-    "@types/uuid": "^9.0.8",
-    "axios": "^1.7.2",
-    "firebase": "^10.12.2",
+    "@js-modules/apps-segway-rental-utils": "workspace:^",
+    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@js-modules/web-react-components": "workspace:^",
+    "@types/lodash": "^4.17.7",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.7.4",
+    "firebase": "^10.13.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.3.0",
-    "reselect": "^5.1.0",
-    "uuid": "^9.0.1"
+    "reselect": "^5.1.1",
+    "uuid": "^10.0.0"
   }
 }
