--- a/packages/apps/travel-log/apps-travel-log-common-store-redux/package.json
+++ b/packages/apps/travel-log/apps-travel-log-common-store-redux/package.json
@@ -12,27 +12,27 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@js-modules/api-nest-utils": "workspace:^0.0.0",
-    "@js-modules/apps-travel-log-api-core-modules": "workspace:^0.0.0",
-    "@js-modules/apps-travel-log-common-constants": "workspace:^0.0.0",
-    "@js-modules/common-redux-reducer-auth-keycloak": "workspace:^0.0.0",
-    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@js-modules/web-react-hooks": "workspace:^0.0.0",
-    "@types/lodash": "^4.17.4",
+    "@js-modules/api-nest-utils": "workspace:^",
+    "@js-modules/apps-travel-log-api-core-modules": "workspace:^",
+    "@js-modules/apps-travel-log-common-constants": "workspace:^",
+    "@js-modules/common-redux-reducer-auth-keycloak": "workspace:^",
+    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@js-modules/web-react-hooks": "workspace:^",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-redux": "^7.1.33",
-    "@types/uuid": "^9.0.8",
-    "@types/validator": "^13.11.10",
-    "axios": "^1.7.2",
+    "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.12.0",
+    "axios": "^1.7.4",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.3.0",
-    "reselect": "^5.1.0",
-    "uuid": "^9.0.1",
+    "reselect": "^5.1.1",
+    "uuid": "^10.0.0",
     "validator": "^13.12.0"
   }
 }
