--- a/packages/apps/travel-log/apps-travel-log-web-keycloak-theme/package.json
+++ b/packages/apps/travel-log/apps-travel-log-web-keycloak-theme/package.json
@@ -14,26 +14,26 @@
     "build:keycloakTheme": "pnpm build && keycloakify"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@js-modules/web-react-components-keycloak-theme": "workspace:^0.0.0",
-    "@mui/icons-material": "^5.15.19",
-    "@mui/material": "^5.15.19",
-    "@types/lodash": "^4.17.4",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@js-modules/web-react-components-keycloak-theme": "workspace:^",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
-    "@vitejs/plugin-react": "^4.3.0",
-    "keycloakify": "^9.7.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "keycloakify": "^9.7.4",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
-    "vite": "^5.2.12",
+    "react-router-dom": "^6.26.1",
+    "vite": "^5.4.1",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
