--- a/packages/apps/travel-log/apps-travel-log-web-my-feeds/package.json
+++ b/packages/apps/travel-log/apps-travel-log-web-my-feeds/package.json
@@ -12,19 +12,19 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@js-modules/apps-travel-log-common-constants": "workspace:^0.0.0",
-    "@js-modules/apps-travel-log-common-store-redux": "workspace:^0.0.0",
-    "@js-modules/apps-travel-log-web-components": "workspace:^0.0.0",
-    "@js-modules/apps-travel-log-web-my-workspace": "workspace:^0.0.0",
-    "@js-modules/web-react-components": "workspace:^0.0.0",
-    "@js-modules/web-react-hooks": "workspace:^0.0.0",
-    "@js-modules/web-react-nav": "workspace:^0.0.0",
-    "@mui/material": "^5.15.19",
-    "@types/lodash": "^4.17.4",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@js-modules/apps-travel-log-common-constants": "workspace:^",
+    "@js-modules/apps-travel-log-common-store-redux": "workspace:^",
+    "@js-modules/apps-travel-log-web-components": "workspace:^",
+    "@js-modules/apps-travel-log-web-my-workspace": "workspace:^",
+    "@js-modules/web-react-components": "workspace:^",
+    "@js-modules/web-react-hooks": "workspace:^",
+    "@js-modules/web-react-nav": "workspace:^",
+    "@mui/material": "^5.16.7",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
@@ -32,6 +32,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.26.1"
   }
 }
