--- a/packages/apps/vending-machine/apps-vending-machine-web/package.json
+++ b/packages/apps/vending-machine/apps-vending-machine-web/package.json
@@ -10,38 +10,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@js-modules/apps-vending-machine-common-constants": "workspace:^0.0.0",
-    "@js-modules/apps-vending-machine-common-store-redux": "workspace:^0.0.0",
-    "@js-modules/apps-vending-machine-web-components": "workspace:^0.0.0",
-    "@js-modules/apps-vending-machine-web-my-products": "workspace:^0.0.0",
-    "@js-modules/apps-vending-machine-web-shopping-cart": "workspace:^0.0.0",
-    "@js-modules/apps-vending-machine-web-site": "workspace:^0.0.0",
-    "@js-modules/apps-vending-machine-web-store": "workspace:^0.0.0",
-    "@js-modules/common-react-hooks": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@js-modules/web-react-components": "workspace:^0.0.0",
-    "@js-modules/web-react-hooks": "workspace:^0.0.0",
-    "@js-modules/web-react-nav": "workspace:^0.0.0",
-    "@js-modules/web-styles-material-ui": "workspace:^0.0.0",
-    "@mui/icons-material": "^5.15.19",
-    "@mui/material": "^5.15.19",
-    "@types/lodash": "^4.17.4",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@js-modules/apps-vending-machine-common-constants": "workspace:^",
+    "@js-modules/apps-vending-machine-common-store-redux": "workspace:^",
+    "@js-modules/apps-vending-machine-web-components": "workspace:^",
+    "@js-modules/apps-vending-machine-web-my-products": "workspace:^",
+    "@js-modules/apps-vending-machine-web-shopping-cart": "workspace:^",
+    "@js-modules/apps-vending-machine-web-site": "workspace:^",
+    "@js-modules/apps-vending-machine-web-store": "workspace:^",
+    "@js-modules/common-react-hooks": "workspace:^",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@js-modules/web-react-components": "workspace:^",
+    "@js-modules/web-react-hooks": "workspace:^",
+    "@js-modules/web-react-nav": "workspace:^",
+    "@js-modules/web-styles-material-ui": "workspace:^",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
-    "@vitejs/plugin-react": "^4.3.0",
-    "keycloak-js": "24.0.4",
+    "@vitejs/plugin-react": "^4.3.1",
+    "keycloak-js": "25.0.2",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
-    "vite": "^5.2.12",
+    "react-router-dom": "^6.26.1",
+    "vite": "^5.4.1",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
