--- a/packages/common/redux/common-redux-utils-normalized-reducers/package.json
+++ b/packages/common/redux/common-redux-utils-normalized-reducers/package.json
@@ -12,15 +12,15 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@js-modules/api-nest-utils": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@testing-library/react": "^15.0.7",
-    "@types/lodash": "^4.17.4",
+    "@js-modules/api-nest-utils": "workspace:^",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@testing-library/react": "^16.0.0",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
-    "@types/uuid": "^9.0.8",
-    "axios": "^1.7.2",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.7.4",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -28,8 +28,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.3.0",
     "redux-saga-test-plan": "^4.0.6",
-    "reselect": "^5.1.0",
-    "uuid": "^9.0.1"
+    "reselect": "^5.1.1",
+    "uuid": "^10.0.0"
   },
   "eslintConfig": {}
 }
