--- a/packages/web/react/web-react-components-keycloak-theme/package.json
+++ b/packages/web/react/web-react-components-keycloak-theme/package.json
@@ -12,21 +12,21 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@js-modules/web-react-components": "workspace:^0.0.0",
-    "@js-modules/web-react-hooks": "workspace:^0.0.0",
-    "@mui/material": "^5.15.19",
-    "@types/lodash": "^4.17.4",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@js-modules/web-react-components": "workspace:^",
+    "@js-modules/web-react-hooks": "workspace:^",
+    "@mui/material": "^5.16.7",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "clsx": "^2.1.1",
-    "keycloakify": "^9.7.0",
+    "keycloakify": "^9.7.4",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.26.1"
   }
 }
