--- a/packages/web/react/web-react-components/package.json
+++ b/packages/web/react/web-react-components/package.json
@@ -11,20 +11,20 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@js-modules/common-react-hooks": "workspace:^0.0.0",
-    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@js-modules/web-react-hooks": "workspace:^0.0.0",
-    "@js-modules/web-styles-material-ui": "workspace:^0.0.0",
-    "@mui/material": "^5.15.19",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
+    "@js-modules/common-react-hooks": "workspace:^",
+    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@js-modules/web-react-hooks": "workspace:^",
+    "@js-modules/web-styles-material-ui": "workspace:^",
+    "@mui/material": "^5.16.7",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-redux": "^7.1.33",
     "@types/react-window": "^1.8.8",
@@ -32,7 +32,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.26.1",
     "react-window": "^1.8.10"
   },
   "devDependencies": {
