--- a/packages/web/react/web-react-hooks/package.json
+++ b/packages/web/react/web-react-hooks/package.json
@@ -11,19 +11,19 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@js-modules/common-react-hooks": "workspace:^0.0.0",
-    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@mui/material": "^5.15.19",
-    "@types/lodash": "^4.17.4",
+    "@js-modules/common-react-hooks": "workspace:^",
+    "@js-modules/common-redux-utils-normalized-reducers": "workspace:^",
+    "@js-modules/common-utils-general": "workspace:^",
+    "@mui/material": "^5.16.7",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/validator": "^13.11.10",
+    "@types/validator": "^13.12.0",
     "class-validator": "^0.14.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.26.1",
     "validator": "^13.12.0"
   },
   "eslintConfig": {}
