--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-modules",
   "private": true,
   "scripts": {
-    "clean:main": "rm -rf `find -type d -name 'node_modules'` `find -type d -name 'build'` `find -type d -name 'coverage'` .husky .eslintignore .prettierignore .solhintignore",
+    "clean:main": "rm -rf `find . -type d -name 'node_modules'` `find . -type d -name 'build'` `find . -type d -name 'coverage'` .husky .eslintignore .prettierignore .solhintignore",
     "clean:tsbuildinfo": "rm -rf `find -type f -name '*.tsbuildinfo'`",
     "clean:graph": "rm -rf `find -type d -name 'dependency-graph*'` `find -type f -name 'dependency-graph*'`",
     "clean:lock-files": "rm -rf `find -type f -name 'package-lock.json'` `find -type f -name 'pnpm-lock.yaml'` `find -type f -name 'yarn.lock'`",
