--- a/packages/apps/segway-rental/apps-segway-rental-web/package.json
+++ b/packages/apps/segway-rental/apps-segway-rental-web/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@js-modules/apps-segway-rental-mui-icons": "workspace:^",
     "@js-modules/apps-segway-rental-store-redux": "workspace:^",
     "@js-modules/apps-segway-rental-utils": "workspace:^",
@@ -24,23 +24,23 @@
     "@js-modules/web-react-hooks": "workspace:^",
     "@js-modules/web-react-nav": "workspace:^",
     "@js-modules/web-styles-material-ui": "workspace:^",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/lab": "5.0.0-alpha.173",
-    "@mui/material": "^5.16.7",
-    "@types/lodash": "^4.17.7",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-redux": "^7.1.33",
-    "@vitejs/plugin-react": "^4.3.1",
-    "date-fns": "^3.6.0",
+    "@mui/icons-material": "^7.0.0",
+    "@mui/lab": "7.0.0-beta.9",
+    "@mui/material": "^7.0.0",
+    "@types/lodash": "^4.17.16",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "@types/react-redux": "^7.1.34",
+    "@vitejs/plugin-react": "^4.3.4",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.1",
-    "uuid": "^10.0.0",
-    "vite": "^5.4.1",
-    "vite-plugin-svgr": "^4.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.0",
+    "uuid": "^11.1.0",
+    "vite": "^6.2.3",
+    "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
