--- a/packages/apps/dapp/apps-dapp-web/package.json
+++ b/packages/apps/dapp/apps-dapp-web/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
+    "dev:dapp-web": "vite",
     "build": "tsc -b tsconfig.build.json && vite build",
     "preview": "vite preview"
   },
@@ -18,6 +18,7 @@
     "@js-modules/apps-dapp-common-constants": "workspace:^",
     "@js-modules/apps-dapp-common-store-redux": "workspace:^",
     "@js-modules/apps-dapp-web-analytics": "workspace:^",
+    "@js-modules/apps-dapp-web-components": "workspace:^",
     "@js-modules/apps-dapp-web-portfolio": "workspace:^",
     "@js-modules/apps-dapp-web-tokens": "workspace:^",
     "@js-modules/apps-dapp-web-transactions": "workspace:^",
