--- a/packages/apps/travel-log/apps-travel-log-web-keycloak-theme/package.json
+++ b/packages/apps/travel-log/apps-travel-log-web-keycloak-theme/package.json
@@ -11,7 +11,10 @@
     "dev": "vite --port 5174",
     "build": "tsc -b tsconfig.build.json && vite build",
     "preview": "vite preview",
-    "build:keycloakTheme": "pnpm build && keycloakify"
+    "keycloakify:build": "pnpm build && keycloakify build",
+    "keycloakify:add-story": "keycloakify add-story",
+    "keycloakify:eject-page": "keycloakify eject-page",
+    "storybook": "storybook dev -p 5175"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,20 +22,22 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@js-modules/apps-travel-log-common-store-redux": "workspace:^",
+    "@js-modules/apps-travel-log-web-components": "workspace:^",
     "@js-modules/web-react-components-keycloak-theme": "workspace:^",
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.0",
+    "@storybook/react": "^8.6.11",
+    "@storybook/react-vite": "^8.6.11",
     "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "keycloakify": "^11.8.22",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.0",
+    "storybook": "^8.6.11",
     "vite": "^6.2.3",
     "vite-tsconfig-paths": "^4.3.2"
   }
