--- a/packages/apps/travel-log/apps-travel-log-common-constants/tsconfig.build.json
+++ b/packages/apps/travel-log/apps-travel-log-common-constants/tsconfig.build.json
@@ -5,8 +5,5 @@
     "rootDir": "src",
     "outDir": "build"
   },
-  "include": ["./src"],
-  "references": [
-    { "path": "../../../common/utils/common-utils-general/tsconfig.build.json" }
-  ]
+  "include": ["./src"]
 }
