--- a/packages/apps/travel-log/apps-travel-log-web-components/tsconfig.build.json
+++ b/packages/apps/travel-log/apps-travel-log-web-components/tsconfig.build.json
@@ -7,8 +7,5 @@
     "rootDir": "src",
     "outDir": "build",
   },
-  "include": ["./src"],
-  "references": [
-    { "path": "../../../common/utils/common-utils-general/tsconfig.build.json" }
-  ]
+  "include": ["./src"]
 }
