--- a/packages/apps/travel-log/apps-travel-log-web/tsconfig.build.json
+++ b/packages/apps/travel-log/apps-travel-log-web/tsconfig.build.json
@@ -5,16 +5,5 @@
     "jsx": "react-jsx",
     "noEmit": true
   },
-  "include": ["./src", "vite.config.ts"],
-  "references": [
-    {
-      "path": "../../../apps/dapp/apps-travel-log-common-store-redux/tsconfig.build.json"
-    },
-    {
-      "path": "../../../common/utils/common-utils-general/tsconfig.build.json"
-    },
-    { "path": "../../../web/react/web-react-components/tsconfig.build.json" },
-    { "path": "../../../web/react/web-react-hooks/tsconfig.build.json" },
-    { "path": "../../../web/styles/web-styles-material-ui/tsconfig.build.json" }
-  ]
+  "include": ["./src", "vite.config.ts"]
 }
