--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "js-modules",
   "private": true,
   "scripts": {
-    "clean:main": "rm -rf `find . -type d -name 'node_modules'` `find . -type d -name 'build'` `find . -type d -name 'coverage'` .husky .eslintignore .prettierignore .solhintignore",
-    "clean:tsbuildinfo": "rm -rf `find -type f -name '*.tsbuildinfo'`",
-    "clean:graph": "rm -rf `find -type d -name 'dependency-graph*'` `find -type f -name 'dependency-graph*'`",
-    "clean:lock-files": "rm -rf `find -type f -name 'package-lock.json'` `find -type f -name 'pnpm-lock.yaml'` `find -type f -name 'yarn.lock'`",
+    "clean:main": "rm -rf `find . -type d -name 'node_modules'` `find . -type d -name 'coverage'` .husky .eslintignore .prettierignore .solhintignore",
+    "clean:build": "rm -rf `find . -type d -name 'build'`",
+    "clean:tsbuildinfo": "rm -rf `find . -type f -name '*.tsbuildinfo'`",
+    "clean:graph": "rm -rf `find . -type d -name 'dependency-graph*'` `find . -type f -name 'dependency-graph*'`",
+    "clean:lock-files": "rm -rf `find . -type f -name 'package-lock.json'` `find . -type f -name 'pnpm-lock.yaml'` `find . -type f -name 'yarn.lock'`",
     "clean:git-hooks": "git config --unset core.hooksPath",
-    "reset:clean": "pnpm clean:main && pnpm clean:tsbuildinfo",
+    "reset:clean": "pnpm clean:main && pnpm clean:build && pnpm clean:tsbuildinfo",
     "reset:install": "ln -s .gitignore .eslintignore && ln -s .gitignore .prettierignore && ln -s .gitignore .solhintignore && pnpm install",
     "reset:reset": "pnpm reset:clean && pnpm reset:install",
     "git-hooks:set": "husky install && pnpm husky add .husky/pre-commit 'pnpm lint:fix' && pnpm husky add .husky/pre-commit 'pnpm commitlint --edit $1'",
