--- a/packages/api/nest/api-nest-utils/tsconfig.build.json
+++ b/packages/api/nest/api-nest-utils/tsconfig.build.json
@@ -1,12 +1,10 @@
 {
   "extends": "../../../../tsconfig.build.json",
   "compilerOptions": {
+    "module": "commonjs",
     "composite": true,
     "rootDir": "src",
     "outDir": "build"
   },
-  "include": ["src"],
-  "references": [
-    { "path": "../../../common/utils/common-utils-general/tsconfig.build.json" }
-  ]
+  "include": ["src"]
 }
