--- a/packages/apps/travel-log/apps-travel-log-api-core-modules/tsconfig.build.json
+++ b/packages/apps/travel-log/apps-travel-log-api-core-modules/tsconfig.build.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../../../tsconfig.build.json",
   "compilerOptions": {
+    "module": "commonjs",
     "composite": true,
     "rootDir": "src",
     "outDir": "build"
