--- a/packages/apps/travel-log/apps-travel-log-api-core-modules/tsconfig.json
+++ b/packages/apps/travel-log/apps-travel-log-api-core-modules/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "extends": "../../../../tsconfig.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "module": "commonjs",
+  },
   "include": ["src"]
 }
