--- a/packages/apps/travel-log/apps-travel-log-common-constants-cjs/tsconfig.json
+++ b/packages/apps/travel-log/apps-travel-log-common-constants-cjs/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
-  "compilerOptions": {
-    "module": "commonjs"
-  },
+  "compilerOptions": {},
   "include": ["src"]
 }
