--- a/packages/common/utils/common-utils-general-cjs/tsconfig.json
+++ b/packages/common/utils/common-utils-general-cjs/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
-  "compilerOptions": {
-    "module": "commonjs"
-  },
+  "compilerOptions": {},
   "include": ["src"]
 }
