fix: pnpm dlx nx init

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "js-modules",
   "private": true,
   "scripts": {
-    "clean:main": "rm -rf `find . -type d -name 'node_modules'` `find . -type d -name 'coverage'` .husky .eslintignore .prettierignore .solhintignore",
+    "clean:main": "rm -rf `find . -type d -name 'node_modules'` `find . -type d -name 'coverage'` .husky .eslintignore .nxignore .prettierignore .solhintignore",
     "clean:build": "rm -rf `find . -type d -name 'build'`",
     "clean:tsbuildinfo": "rm -rf `find . -type f -name '*.tsbuildinfo'`",
     "clean:graph": "rm -rf `find . -type d -name 'dependency-graph*'` `find . -type f -name 'dependency-graph*'`",
     "clean:lock-files": "rm -rf `find . -type f -name 'package-lock.json'` `find . -type f -name 'pnpm-lock.yaml'` `find . -type f -name 'yarn.lock'`",
     "clean:git-hooks": "git config --unset core.hooksPath",
     "reset:clean": "pnpm clean:main && pnpm clean:build && pnpm clean:tsbuildinfo",
-    "reset:install": "ln -s .gitignore .eslintignore && ln -s .gitignore .prettierignore && ln -s .gitignore .solhintignore && pnpm install",
+    "reset:install": "ln -s .gitignore .eslintignore && ln -s .gitignore .nxignore && ln -s .gitignore .prettierignore && ln -s .gitignore .solhintignore && pnpm install",
     "reset:reset": "pnpm reset:clean && pnpm reset:install",
     "git-hooks:set": "husky install && pnpm husky add .husky/pre-commit 'pnpm lint:fix' && pnpm husky add .husky/pre-commit 'pnpm commitlint --edit $1'",
     "git-hooks:reset": "pnpm clean:git-hooks && pnpm git-hooks:set",
@@ -19,6 +19,7 @@
     "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --list-different './**/*.sol' && solhint       './**/*.sol'",
     "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --write          './**/*.sol' && solhint --fix './**/*.sol'",
     "graph:dependency-map": "monorepo-mapper --format pdf",
+    "graph:nx": "pnpm nx graph",
     "graph:package-tree": " tree -d -L 3 packages",
     "lerna:build": "lerna run build",
     "prepublish": "pnpm lint:fix && pnpm test:coverage && pnpm lerna:build"
@@ -40,6 +41,7 @@
     "jest": "^29.7.0",
     "lerna": "^8.2.1",
     "monorepo-mapper": "^1.0.5",
+    "nx": "21.0.3",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.4.2",
     "solhint": "^5.0.5",
