fix: refactor jest config to test and measure coverage at the package level

--- a/packages/api/nest/api-nest-module-auth-keycloak/package.json
+++ b/packages/api/nest/api-nest-module-auth-keycloak/package.json
@@ -9,7 +9,10 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc -b tsconfig.build.json"
+    "build": "tsc -b tsconfig.build.json",
+    "test:test":  "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^",
