--- a/packages/web/react/web-react-components/package.json
+++ b/packages/web/react/web-react-components/package.json
@@ -8,7 +8,10 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc -b tsconfig.build.json"
+    "build": "tsc -b tsconfig.build.json",
+    "test:test":  "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
