--- a/packages/apps/travel-log/apps-travel-log-api-core-modules/package.json
+++ b/packages/apps/travel-log/apps-travel-log-api-core-modules/package.json
@@ -9,7 +9,10 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc -b tsconfig.build.json"
+    "build": "tsc -b tsconfig.build.json",
+    "test:test":  "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^",
