--- a/packages/web/react/web-react-components/package.json
+++ b/packages/web/react/web-react-components/package.json
@@ -18,12 +18,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@js-modules/api-nest-utils": "workspace:^",
     "@js-modules/common-react-hooks": "workspace:^",
     "@js-modules/common-redux-utils-normalized-reducers": "workspace:^",
     "@js-modules/common-utils-general": "workspace:^",
     "@js-modules/web-react-hooks": "workspace:^",
     "@js-modules/web-styles-material-ui": "workspace:^",
     "@mui/material": "^7.0.0",
+    "@mui/x-date-pickers": "^7.7.1",
+    "@mui/x-date-pickers-pro": "^7.7.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
@@ -32,6 +35,7 @@
     "@types/react-redux": "^7.1.34",
     "@types/react-window": "^1.8.8",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-redux": "^9.2.0",
